--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Country Details</a>
+            <a class="nav-link" href="about.html"> <b>Country Details</b></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              More
+            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <b>More</b> 
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="turistplace.html">Services</a></li>
-              <li><a class="dropdown-item" href="#contact">Contact</a></li>
+             
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#feedback">Feedback</a></li>
+              <li><a class="dropdown-item" href="feedback.html">Feedback</a></li>
             </ul>
           </li>
           <li class="nav-item">
