--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </div>
     </footer>
 
-    <!-- Bootstrap and Custom JS -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="about.js"></script>
 </body>
