--- a/turistplace.html
+++ b/turistplace.html
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                        <div data-bs-spy="scroll" data-bs-target="list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                             <h4 id="list-item-1" style="color: rgb(10, 17, 220) ;"><u>1.Bhaktapur:</u></h4>
                             <p> Bhaktapur, a charming ancient town in the Kathmandu Valley, is a treasure trove of Newari culture and medieval architecture. Known for its well-preserved monuments, narrow streets, and traditional brick houses, Bhaktapur is a living museum where the old-world charm still thrives. Key attractions include the majestic Durbar Square, the 55-Window Palace, and the Vatsala Temple. The town is also famous for its pottery, woodwork, and vibrant festivals, which showcase the region's rich cultural heritage. Visitors can enjoy local specialties like "king curd" (juju dhau) and explore the authentic handicrafts. </p>
                             <h4 id="list-item-2" style="color: rgb(10, 17, 220);"><u>2.Santorini:</u></h4>
@@ -186,6 +186,9 @@
             </p>
         </div>
     </footer>
+
+    
+    
 
     <script src="turistplace.js"></script>
     <!--BootStrap js-->
